# nhsuk-frontend

./: .browserslistrc  .djlint_rules.yaml  .djlintrc  .dockerignore  .editorconfig  .eslintrc.js  .eslintrc.json  .gitattributes  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .htmlhintrc  .htmlvalidate.js  .npmignore  .prettierignore  .prettierrc.js  .sass-lint.yml  .slugignore  .stylelintignore  .stylelintrc.js  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile-cypress  LICENSE  NHS-redesign-typography-sizing.numbers  Procfile  README.md  app.js  app.json  azure-pipelines.yml  babel.config.js  backstop.config.js  backstop.json  banners.html  browsersync.config.js  components.html  cypress.json  (+24 more)
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.husky/: pre-commit
_templates/: example.html  forms.html  layout.html  markdown-wrapper.html  page.html
app/: index.njk
assets/: nhsuk-0.0.0.min.css  nhsuk-0.1.1.min.css  nhsuk-0.1.1.min.js  nhsuk-0.1.2.min.css  nhsuk-0.1.2.min.js  nhsuk-0.1.4.min.css  nhsuk-0.1.6.min.css  nhsuk-0.1.6.min.js  nhsuk-0.2.1.min.css  nhsuk-0.3.0.min.css  nhsuk-0.3.0.min.js  nhsuk-0.4.0.min.css  nhsuk-0.5.0.min.css  nhsuk-0.5.1.min.css  nhsuk-0.5.2.min.css  nhsuk-0.5.3.min.js  nhsuk-0.6.0.min.css  nhsuk-0.7.0.min.css  (+68 more)
jinja_app/: README.md  main.py  pyproject.toml
jinja_app/static/nhsuk-frontend/: assets  javascripts
jinja_app/static/nhsuk-frontend/stylesheets/: nhsuk-9.3.0.min.css  nhsuk-9.3.0.min.css.map
jinja_app/templates/nhsuk-frontend/: components  macros
(+1958 files in other folders)
