[project]
name = "nhs-frontend-jinja-app"
version = "0.1.0"
description = "Generator for NHS design system component examples using Jinja"
authors = [{ name = "Your Name", email = "you@example.com" }]
license = { text = "MIT" }
readme = "../README.md"
requires-python = ">=3.13"
dependencies = ["flask (>=3.1.0,<4.0.0)"]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
